# Telegram-Medical-data-scraping-data-modeling-object-detection-with-YOLO

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
dagster_pipeline/: jobs.py  pyproject.toml  repository.py
dagster_pipeline/.tmp_dagster_home_dkssnu1d/history/: runs.db
dagster_pipeline/.tmp_dagster_home_dkssnu1d/history/runs/: index.db
dagster_pipeline/.tmp_dagster_home_dkssnu1d/schedules/: schedules.db
dagster_pipeline/.tmp_dagster_home_kxvqatbw/history/: runs.db
dagster_pipeline/.tmp_dagster_home_kxvqatbw/history/runs/: index.db
dagster_pipeline/.tmp_dagster_home_kxvqatbw/schedules/: schedules.db
dagster_pipeline/.tmp_dagster_home_t87vjt23/history/: runs.db
dagster_pipeline/.tmp_dagster_home_t87vjt23/history/runs/: index.db
dagster_pipeline/.tmp_dagster_home_t87vjt23/schedules/: schedules.db
dagster_pipeline/ops/: enrich.py  load.py  scrape.py  transform.py
my_project/: crud.py  database.py  main.py  schemas.py
src/: drop+table.py  enrich_with_yolo.py  env_loader.py  load_raw_to_postgres.py  scrapy.py  test.py
telegram_dbt_project/: dbt_project.yml
telegram_dbt_project/models/: schema.yml
telegram_dbt_project/models/example/: schema.yml
telegram_dbt_project/models/marts/: dim_channels.sql  dim_dates.sql  fct_image_detections.sql  fct_messages.sql
telegram_dbt_project/models/staging/: stg_telegram_messages.sql
